--- a/pages/contato.html
+++ b/pages/contato.html
@@ -11,7 +11,10 @@
     <meta name="author" content="Diogo Lima Carvalho">
     <link rel="stylesheet" href="../src/css/style.css">
     <link rel="shortcut icon" href="src/imagem/cps.ico" type="image/x-icon">
-
+    <!-- Jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <!-- Jquery mask -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.mask/1.14.16/jquery.mask.min.js" integrity="sha512-pHVGpX7F/27yZ0ISY+VVjyULApbDlD0/X0rgGbTqCE7WFW5MezNTWG/dnhtbBuICzsd0WQPgpE4REBLv+UqChw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <!-- Título do site -->
     <title>Aula 11 - HTML</title>
 </head>
@@ -209,7 +212,7 @@
     </main>
 
     <!-- Rodapé da página -->
-    <footer>
+    <footer id="rodape">
         <p>Desenvolvido por <a href="https://github.com/DiogoLCarvalho" target="_blank" class="social">Diogo Lima
                 Carvalho</a></p>
         <p>Todos os direitos reservados &copy;2022</p>
@@ -222,7 +225,13 @@
         </p>
     </footer>
 
-    <script src="js/validar.js"></script>
+    <script src="../src/js/validar.js"></script>
+    <script src="../src/js/mask.js"></script>
+    <script src="../src/js/cep.js"></script>
+    <script src="../src/js/fonte.js"></script>
+    <script src="../src/js/contrastre.js"></script>
+
+
 </body>
 
 
