--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta name="author" content="Diogo Lima Carvalho">
     <link rel="stylesheet" href="src/css/style.css">
     <link rel="shortcut icon" href="src/imagem/cps.ico" type="image/x-icon">
+    <!-- jquery -->
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     <!-- Título do site -->
     <title>Aula 11 - HTML</title>
@@ -150,7 +152,8 @@
 
 
     </footer>
-
+    <script src="src/js/fonte.js"></script>
+    <script src="src/js/contrastre.js"></script>
 </body>
 
 
