--- a/pages/metadados.html
+++ b/pages/metadados.html
@@ -11,6 +11,8 @@
     <meta name="author" content="Diogo Lima Carvalho">
     <link rel="stylesheet" href="../src/css/style.css">
     <link rel="shortcut icon" href="src/imagem/cps.ico" type="image/x-icon">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
 
     <!-- Título do site -->
     <title>Aula 11 - HTML</title>
@@ -120,13 +122,13 @@
                 O elemento &lt;meta&gt; é usado para especificar qual conjunto de caracteres é usado, descrição da
                 página, palavras-chave, autor e outros metadados.
             </p>
-            <img src="../src/imagem/metadados.png" alt="exemplo em código utilizando a tag meta do HTML">
+            <img src="../src/imagem/metadados.png" alt="exemplo em código utilizando a tag meta do HTML" id="img-100">
         </section>
 
     </main>
 
     <!-- Rodapé da página -->
-    <footer>
+    <footer id="rodape">
         <p>Desenvolvido por <a href="https://github.com/DiogoLCarvalho" target="_blank" class="social">Diogo Lima
                 Carvalho</a></p>
         <p>Todos os direitos reservados &copy;2022</p>
@@ -137,6 +139,10 @@
             </a>
         </p>
     </footer>
+    <script src="../src/js/fonte.js"></script>
+    <script src="../src/js/contrastre.js"></script>
+
+
 </body>
 
 
