--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 
     </footer>
     <script src="src/js/fonte.js"></script>
-    <script src="src/js/contrastre.js"></script>
+    <script src="src/js/contraste.js"></script>
 </body>
 
 
