--- a/pages/acessibilidade.html
+++ b/pages/acessibilidade.html
@@ -232,7 +232,7 @@
     </footer>
 
     <script src="../src/js/fonte.js"></script>
-    <script src="../src/js/contrastre.js"></script>
+    <script src="../src/js/contraste.js"></script>
 
 
 </body>
