--- a/pages/contato.html
+++ b/pages/contato.html
@@ -229,7 +229,7 @@
     <script src="../src/js/mask.js"></script>
     <script src="../src/js/cep.js"></script>
     <script src="../src/js/fonte.js"></script>
-    <script src="../src/js/contrastre.js"></script>
+    <script src="../src/js/contraste.js"></script>
 
 
 </body>
