--- a/pages/layout.html
+++ b/pages/layout.html
@@ -152,7 +152,7 @@
         </p>
     </footer>
     <script src="../src/js/fonte.js"></script>
-    <script src="../src/js/contrastre.js"></script>
+    <script src="../src/js/contraste.js"></script>
 
 
 </body>
