--- a/pages/lista_nao_ordenada.html
+++ b/pages/lista_nao_ordenada.html
@@ -147,7 +147,7 @@
         </p>
     </footer>
     <script src="../src/js/fonte.js"></script>
-    <script src="../src/js/contrastre.js"></script>
+    <script src="../src/js/contraste.js"></script>
 
 
 </body>
