--- a/pages/metadados.html
+++ b/pages/metadados.html
@@ -140,7 +140,7 @@
         </p>
     </footer>
     <script src="../src/js/fonte.js"></script>
-    <script src="../src/js/contrastre.js"></script>
+    <script src="../src/js/contraste.js"></script>
 
 
 </body>
